fixtures/core/schema/accepted/core-fn-body-minimal.fields
# Required fields for an Edict-authored pure helper body.
expect accept
shape core-fn-body
field body
field params
