fixtures/core/schema/rejected/core-fn-body-effect-node-field.fields
# Pure helper bodies cannot expose effect-capable node lists.
expect reject
shape core-fn-body
field body
field nodes
field params
